# toothfairy-contracts

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  README.md  package-lock.json  package.json
programs/toothfairy-escrow/: Cargo.toml
programs/toothfairy-escrow/src/: lib.rs
scripts/: cleanup-profiles.mjs  deposit-birthday.mjs  devnet-create-child.ts  fund-phantom.mjs  mainnet-fee-test.mjs  mainnet-init-treasury.mjs  mainnet-integration-test.mjs  setup-clean-profiles.mjs  withdraw-treasury.mjs
tests/: toothfairy-escrow.ts
