[package]
name = "toothfairy-escrow"
version = "0.1.0"
description = "Tooth Fairy Network — Soulbound NFT milestones with escrow deposits on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "toothfairy_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
